examples/non-examples/no-case-matched.golden
Error at phase p0: No case matched at no-case-matched.kl:4.3-6.10: (true)
