examples/non-examples/no-case-matched.kl
#lang "prelude.kl"

(example
  (case (true)
    [(false)
     42]))
